--- a/release/title.html
+++ b/release/title.html
@@ -32,16 +32,8 @@
 
     <div class="content">
       <div class="titlepage">
-<div>
-<div><h2 class="title">
-<a id="idp4479232"></a>Backbone.js on Rails</h2></div>
-<div><div class="author">
-<h3 class="author">
-<span class="firstname">Jason</span> <span class="surname">Morrison</span>
-</h3>
-<code class="email">&lt;<a class="email" href="mailto:&lt;jmorrison@thoughtbot.com&gt;">&lt;jmorrison@thoughtbot.com&gt;</a>&gt;</code>
-</div></div>
-</div>
+<div><div><h2 class="title">
+<a id="idp4479232"></a>Backbone.js on Rails</h2></div></div>
 <hr>
 </div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h2 class="title" style="clear: both">
