--- a/release/toc.html
+++ b/release/toc.html
@@ -19,12 +19,10 @@
 <a href="book.html#_what_goes_where_in_mvc"><b>What goes where in MVC</b></a><br/>
 <a href="book.html#_namespacing_your_application"><b>Namespacing your application</b></a><br/>
 <h3><b>Chapter 5<br/>
-<a href="book.html#_rails_integration">Rails integration</a></b></h3><br/>
-<a href="book.html#_activerecord_and_backbone_js"><b>ActiveRecord and Backbone.js</b></a><br/>
-<a href="book.html#_converting_your_rails_models_to_backbone_js_friendly_json"><b>Converting your Rails models to Backbone.js-friendly JSON</b></a><br/>
-<a href="book.html#_organizing_your_backbone_js_and_rails_code_side_by_side"><b>Organizing your Backbone.js and Rails code side-by-side</b></a><br/>
-<a href="book.html#_converting_an_existing_page_view_area_to_use_backbone_js"><b>Converting an existing page/view area to use Backbone.js</b></a><br/>
-<a href="book.html#_automatically_using_the_rails_authentication_token"><b>Automatically using the Rails authentication token</b></a><br/>
+<a href="book.html#_rails_integration">Rails Integration</a></b></h3><br/>
+<a href="book.html#_organizing_your_backbone_js_code_in_a_rails_app"><b>Organizing your Backbone.js code in a Rails app</b></a><br/>
+<a href="book.html#_rails_3_0_and_prior"><b>Rails 3.0 and prior</b></a><br/>
+<a href="book.html#_rails_3_1"><b>Rails 3.1</b></a><br/>
 <h3><b>Chapter 6<br/>
 <a href="book.html#_views_and_templates">Views and Templates</a></b></h3><br/>
 <a href="book.html#_view_explanation"><b>View explanation</b></a><br/>
