--- a/release/rails_integration.html
+++ b/release/rails_integration.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="master.css" type="text/css" />
-    <title>Rails integration</title>
+    <title>Rails Integration</title>
   </head>
 
   <body>
@@ -33,17 +33,93 @@
     <div class="content">
       <div class="section" lang="en" xml:lang="en">
 <div class="titlepage"><div><div><h2 class="title" style="clear: both">
-<a id="_rails_integration"></a>Rails integration</h2></div></div></div>
-<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_activerecord_and_backbone_js"></a>ActiveRecord and Backbone.js</h3></div></div></div></div>
-<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_converting_your_rails_models_to_backbone_js_friendly_json"></a>Converting your Rails models to Backbone.js-friendly JSON</h3></div></div></div></div>
-<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_organizing_your_backbone_js_and_rails_code_side_by_side"></a>Organizing your Backbone.js and Rails code side-by-side</h3></div></div></div></div>
-<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_converting_an_existing_page_view_area_to_use_backbone_js"></a>Converting an existing page/view area to use Backbone.js</h3></div></div></div></div>
-<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_automatically_using_the_rails_authentication_token"></a>Automatically using the Rails authentication token</h3></div></div></div></div>
+<a id="_rails_integration"></a>Rails Integration</h2></div></div></div>
+<div class="section" lang="en" xml:lang="en">
+<div class="titlepage"><div><div><h3 class="title">
+<a id="_organizing_your_backbone_js_code_in_a_rails_app"></a>Organizing your Backbone.js code in a Rails app</h3></div></div></div>
+<p>When using Backbone.js in a Rails app, you’ll have two primary kinds of Backbone.js-related assets: classes, and templates.</p>
+</div>
+<div class="section" lang="en" xml:lang="en">
+<div class="titlepage"><div><div><h3 class="title">
+<a id="_rails_3_0_and_prior"></a>Rails 3.0 and prior</h3></div></div></div>
+<p>With Rails 3.0 and prior, store your Backbone.js classes in <code class="literal">public/javascripts</code>:</p>
+<pre class="screen">public/
+  javascripts/
+    jquery.js
+    jquery-ui.js
+    models/
+      user.js
+      todo.js
+    routers/
+      users_router.js
+      todos_router.js
+    views/
+      users/
+        users_index.js
+        users_new.js
+        users_edit.js
+      todos/
+        todos_index.js</pre>
+<p>If you are using templates, we prefer storing them in <code class="literal">app/templates</code> to keep them separated from the server views:</p>
+<pre class="screen">app/
+  views/
+    pages/
+      home.html.erb
+      terms.html.erb
+      privacy.html.erb
+      about.html.erb
+  templates/
+    users/
+      index.jst
+      new.jst
+      edit.jst
+    todos/
+      index.jst
+      show.jst</pre>
+<p>On Rails 3.0 and prior apps, we use Jammit for packaging assets and precompiling templates:</p>
+<p><a class="ulink" href="http://documentcloud.github.com/jammit/" target="_top">http://documentcloud.github.com/jammit/</a>
+<a class="ulink" href="http://documentcloud.github.com/jammit/#jst" target="_top">http://documentcloud.github.com/jammit/#jst</a></p>
+<div class="section" lang="en" xml:lang="en">
+<div class="titlepage"><div><div><h4 class="title">
+<a id="_a_note_on_jsts_and_jammit"></a>A note on JSTs and Jammit</h4></div></div></div>
+<p>As applications are moving to Rails 3.1, they’re also moving to Sprockets for the asset packager.  Until then, many apps are using Jammit for asset packaging.  One issue with Jammit we’ve encountered and worked around is that the JST template path can change when adding new templates.  We have an open issue and workaround:</p>
+<p><a class="ulink" href="https://github.com/documentcloud/jammit/issues/192" target="_top">https://github.com/documentcloud/jammit/issues/192</a></p>
+</div>
+</div>
+<div class="section" lang="en" xml:lang="en">
+<div class="titlepage"><div><div><h3 class="title">
+<a id="_rails_3_1"></a>Rails 3.1</h3></div></div></div>
+<p>Rails 3.1 introduces the asset pipeline:</p>
+<p><a class="ulink" href="http://edgeguides.rubyonrails.org/asset_pipeline.html" target="_top">http://edgeguides.rubyonrails.org/asset_pipeline.html</a></p>
+<p>which uses the Sprockets library for preprocessing and packaging assets:</p>
+<p><a class="ulink" href="http://getsprockets.org/" target="_top">http://getsprockets.org/</a></p>
+<p>To take advantage of the built-in asset pipeline, organize your Backbone.js templates and classes in paths available to the asset pipeline.  Classes go in <code class="literal">app/assets/javascripts/</code>, and templates go alongside, in <code class="literal">app/assets/templates/</code>:</p>
+<pre class="screen">app/
+  assets/
+    javascripts/
+      jquery.js
+      models/
+        todo.js
+      routers/
+        todos_router.js
+      views/
+        todos/
+          todos_index.js
+    templates/
+      todos/
+        index.jst.ejs
+        show.jst.ejs</pre>
+<p>Using Sprockets' preprocessors, we can use templates as before.  Here, we’re using the EJS template preprocessor to provide the same functionality as Underscore.js' templates.  It compiles the <code class="literal">*.jst</code> files and makes them available to the <code class="literal">window.JST</code> function.  Identifying the <code class="literal">.ejs</code> extension and invoking EJS to compile the templates is managed by Sprockets, and requires the <code class="literal">ejs</code> gem to be included in the application Gemfile.</p>
+<p>Underscore.js templates:
+<a class="ulink" href="http://documentcloud.github.com/underscore/#template" target="_top">http://documentcloud.github.com/underscore/#template</a></p>
+<p>EJS gem:
+<a class="ulink" href="https://github.com/sstephenson/ruby-ejs" target="_top">https://github.com/sstephenson/ruby-ejs</a></p>
+<p>Sprockets support for EJS:
+<a class="ulink" href="https://github.com/sstephenson/sprockets/blob/master/lib/sprockets/ejs_template.rb" target="_top">https://github.com/sstephenson/sprockets/blob/master/lib/sprockets/ejs_template.rb</a>
+=== Converting your Rails models to Backbone.js-friendly JSON
+=== Converting an existing page/view area to use Backbone.js
+=== Automatically using the Rails authentication token</p>
+</div>
 </div>
 
     </div>
