Generate new release

--- a/release/toc.html
+++ b/release/toc.html
@@ -3,18 +3,18 @@
 <head><title>Table of Contents</title></head><body>
 <div><h1><b>TABLE OF CONTENTS</b></h1><br/>
 <h3><b>Chapter 1<br/>
-<a href="book.html#_preface">Preface</a></b></h3><br/>
+<a href="book.html#_preface_section_unstarted">Preface (section unstarted)</a></b></h3><br/>
 <h3><b>Chapter 2<br/>
-<a href="book.html#_getting_up_to_speed">Getting up to speed</a></b></h3><br/>
+<a href="book.html#_getting_up_to_speed_section_unstarted">Getting up to speed (section unstarted)</a></b></h3><br/>
 <a href="book.html#_backbone_js_online_resources"><b>Backbone.js online resources</b></a><br/>
 <a href="book.html#_javascript_online_resources_and_books"><b>JavaScript online resources and books</b></a><br/>
 <h3><b>Chapter 3<br/>
-<a href="book.html#_introduction">Introduction</a></b></h3><br/>
+<a href="book.html#_introduction_section_unstarted">Introduction (section unstarted)</a></b></h3><br/>
 <a href="book.html#_why_use_backbone_js"><b>Why use Backbone.js</b></a><br/>
 <a href="book.html#_when_not_to_use_backbone_js"><b>When not to use Backbone.js</b></a><br/>
 <a href="book.html#_why_not_sproutcore_cappuccino_knockout_js_spine_etc"><b>Why not SproutCore, Cappuccino, Knockout.js, Spine, etc.</b></a><br/>
 <h3><b>Chapter 4<br/>
-<a href="book.html#_organization">Organization</a></b></h3><br/>
+<a href="book.html#_organization_section_unstarted">Organization (section unstarted)</a></b></h3><br/>
 <a href="book.html#_backbone_js_and_mvc"><b>Backbone.js and MVC</b></a><br/>
 <a href="book.html#_what_goes_where_in_mvc"><b>What goes where in MVC</b></a><br/>
 <a href="book.html#_namespacing_your_application"><b>Namespacing your application</b></a><br/>
@@ -23,33 +23,37 @@
 <a href="book.html#_organizing_your_backbone_js_code_in_a_rails_app"><b>Organizing your Backbone.js code in a Rails app</b></a><br/>
 <a href="book.html#_rails_3_0_and_prior"><b>Rails 3.0 and prior</b></a><br/>
 <a href="book.html#_rails_3_1"><b>Rails 3.1</b></a><br/>
+<a href="book.html#_converting_your_rails_models_to_backbone_js_friendly_json_chapter_unstarted"><b>Converting your Rails models to Backbone.js-friendly JSON (chapter unstarted)</b></a><br/>
+<a href="book.html#_converting_an_existing_page_view_area_to_use_backbone_js_chapter_unstarted"><b>Converting an existing page/view area to use Backbone.js (chapter unstarted)</b></a><br/>
+<a href="book.html#_automatically_using_the_rails_authentication_token_chapter_unstarted"><b>Automatically using the Rails authentication token (chapter unstarted)</b></a><br/>
 <h3><b>Chapter 6<br/>
 <a href="book.html#_views_and_templates">Views and Templates</a></b></h3><br/>
-<a href="book.html#_view_explanation"><b>View explanation</b></a><br/>
-<a href="book.html#_templating_strategy"><b>Templating strategy</b></a><br/>
-<a href="book.html#_view_helpers"><b>View helpers</b></a><br/>
-<a href="book.html#_form_helpers"><b>Form helpers</b></a><br/>
-<a href="book.html#_event_binding"><b>Event binding</b></a><br/>
-<a href="book.html#_how_to_use_multiple_views_on_the_same_model_collection"><b>How to use multiple views on the same model/collection</b></a><br/>
-<a href="book.html#_composed_views"><b>Composed views</b></a><br/>
-<a href="book.html#_cleaning_up_understanding_binding_and_unbinding"><b>Cleaning up: understanding binding and unbinding</b></a><br/>
-<a href="book.html#_internationalization"><b>Internationalization</b></a><br/>
+<a href="book.html#_view_explanation_chapter_unstarted"><b>View explanation (chapter unstarted)</b></a><br/>
+<a href="book.html#_templating_strategy_chapter_unstarted"><b>Templating strategy (chapter unstarted)</b></a><br/>
+<a href="book.html#_view_helpers_chapter_unstarted"><b>View helpers (chapter unstarted)</b></a><br/>
+<a href="book.html#_form_helpers_chapter_unstarted"><b>Form helpers (chapter unstarted)</b></a><br/>
+<a href="book.html#_event_binding_chapter_unstarted"><b>Event binding (chapter unstarted)</b></a><br/>
+<a href="book.html#_cleaning_up_understanding_binding_and_unbinding_in_progress"><b>Cleaning up: understanding binding and unbinding (in progress)</b></a><br/>
+<a href="book.html#_swapping_controllers_in_progress"><b>Swapping controllers (in progress)</b></a><br/>
+<a href="book.html#_composite_views_in_progress"><b>Composite views (in progress)</b></a><br/>
+<a href="book.html#_how_to_use_multiple_views_on_the_same_model_collection_chapter_unstarted"><b>How to use multiple views on the same model/collection (chapter unstarted)</b></a><br/>
+<a href="book.html#_internationalization_chapter_unstarted"><b>Internationalization (chapter unstarted)</b></a><br/>
 <h3><b>Chapter 7<br/>
 <a href="book.html#_models_and_collections">Models and collections</a></b></h3><br/>
-<a href="book.html#_naming_conventions"><b>Naming conventions</b></a><br/>
-<a href="book.html#_nested_resources"><b>Nested resources</b></a><br/>
-<a href="book.html#_relationships"><b>Relationships</b></a><br/>
+<a href="book.html#_naming_conventions_chapter_unstarted"><b>Naming conventions (chapter unstarted)</b></a><br/>
+<a href="book.html#_nested_resources_chapter_unstarted"><b>Nested resources (chapter unstarted)</b></a><br/>
+<a href="book.html#_relationships_chapter_unstarted"><b>Relationships (chapter unstarted)</b></a><br/>
 <a href="book.html#_scopes_and_filters"><b>Scopes and filters</b></a><br/>
 <a href="book.html#_sorting"><b>Sorting</b></a><br/>
-<a href="book.html#_client_server_duplicated_business_logic"><b>Client/Server duplicated business logic</b></a><br/>
-<a href="book.html#_validations"><b>Validations</b></a><br/>
-<a href="book.html#_synchronizing_between_clients"><b>Synchronizing between clients</b></a><br/>
+<a href="book.html#_client_server_duplicated_business_logic_chapter_unstarted"><b>Client/Server duplicated business logic (chapter unstarted)</b></a><br/>
+<a href="book.html#_validations_chapter_unstarted"><b>Validations (chapter unstarted)</b></a><br/>
+<a href="book.html#_synchronizing_between_clients_chapter_unstarted"><b>Synchronizing between clients (chapter unstarted)</b></a><br/>
 <h3><b>Chapter 8<br/>
-<a href="book.html#_testing">Testing</a></b></h3><br/>
+<a href="book.html#_testing_section_unstarted">Testing (section unstarted)</a></b></h3><br/>
 <a href="book.html#_full_stack_integration_testing"><b>Full-stack integration testing</b></a><br/>
 <a href="book.html#_isolated_unit_testing"><b>Isolated unit testing</b></a><br/>
 <h3><b>Chapter 9<br/>
-<a href="book.html#_the_javascript_language">The JavaScript language</a></b></h3><br/>
+<a href="book.html#_the_javascript_language_section_unstarted">The JavaScript language (section unstarted)</a></b></h3><br/>
 <a href="book.html#_model_attribute_types_and_serialization"><b>Model attribute types and serialization</b></a><br/>
 <a href="book.html#_context_binding_js_tt_this_tt"><b>Context binding (JS <tt>this</tt>)</b></a><br/>
 <a href="book.html#_coffeescript_with_backbone_js"><b>CoffeeScript with Backbone.js</b></a><br/>
