--- a/release/toc.html
+++ b/release/toc.html
@@ -14,10 +14,10 @@
 <a href="book.html#_when_not_to_use_backbone_js"><b>When not to use Backbone.js</b></a><br/>
 <a href="book.html#_why_not_sproutcore_cappuccino_knockout_js_spine_etc"><b>Why not SproutCore, Cappuccino, Knockout.js, Spine, etc.</b></a><br/>
 <h3><b>Chapter 4<br/>
-<a href="book.html#_organization_section_unstarted">Organization (section unstarted)</a></b></h3><br/>
+<a href="book.html#_organization">Organization</a></b></h3><br/>
 <a href="book.html#_backbone_js_and_mvc"><b>Backbone.js and MVC</b></a><br/>
-<a href="book.html#_what_goes_where_in_mvc"><b>What goes where in MVC</b></a><br/>
-<a href="book.html#_namespacing_your_application"><b>Namespacing your application</b></a><br/>
+<a href="book.html#_what_goes_where"><b>What Goes Where</b></a><br/>
+<a href="book.html#_namespacing_your_application_chapter_unstarted"><b>Namespacing your application (chapter unstarted)</b></a><br/>
 <h3><b>Chapter 5<br/>
 <a href="book.html#_rails_integration">Rails Integration</a></b></h3><br/>
 <a href="book.html#_organizing_your_backbone_js_code_in_a_rails_app"><b>Organizing your Backbone.js code in a Rails app</b></a><br/>
@@ -25,7 +25,7 @@
 <a href="book.html#_rails_3_1"><b>Rails 3.1</b></a><br/>
 <a href="book.html#_converting_your_rails_models_to_backbone_js_friendly_json_chapter_unstarted"><b>Converting your Rails models to Backbone.js-friendly JSON (chapter unstarted)</b></a><br/>
 <a href="book.html#_converting_an_existing_page_view_area_to_use_backbone_js_chapter_unstarted"><b>Converting an existing page/view area to use Backbone.js (chapter unstarted)</b></a><br/>
-<a href="book.html#_automatically_using_the_rails_authentication_token_chapter_unstarted"><b>Automatically using the Rails authentication token (chapter unstarted)</b></a><br/>
+<a href="book.html#_automatically_using_the_rails_authentication_token"><b>Automatically using the Rails authentication token</b></a><br/>
 <h3><b>Chapter 6<br/>
 <a href="book.html#_views_and_templates">Views and Templates</a></b></h3><br/>
 <a href="book.html#_view_explanation_chapter_unstarted"><b>View explanation (chapter unstarted)</b></a><br/>
