Generate new release

--- a/release/models_and_collections.html
+++ b/release/models_and_collections.html
@@ -98,7 +98,7 @@ var Tasks = Backbone.Collection.extend({
 <div class="section" lang="en" xml:lang="en">
 <div class="titlepage"><div><div><h3 class="title">
 <a id="_sorting"></a>Sorting</h3></div></div></div>
-<p>The simplest way to sort <code class="literal">Backbone.Collection</code> is to define a <code class="literal">comparator</code> function:</p>
+<p>The simplest way to sort a <code class="literal">Backbone.Collection</code> is to define a <code class="literal">comparator</code> function:</p>
 <pre class="programlisting">var Tasks = Backbone.Collection.extend({
   model: Task,
   url: '/tasks',
