--- a/release/ar01s07.html
+++ b/release/ar01s07.html
@@ -45,7 +45,7 @@ var Tasks = Backbone.Collection.extend({
   filtered: function(criteriaFunction) {
     return new Tasks(this.select(criteriaFunction));
   }
-});</pre></div><div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title"><a id="_sorting"></a>Sorting</h3></div></div></div><p>The simplest way to sort <code class="literal">Backbone.Collection</code> is to define a <code class="literal">comparator</code> function:</p><pre class="programlisting">var Tasks = Backbone.Collection.extend({
+});</pre></div><div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title"><a id="_sorting"></a>Sorting</h3></div></div></div><p>The simplest way to sort a <code class="literal">Backbone.Collection</code> is to define a <code class="literal">comparator</code> function:</p><pre class="programlisting">var Tasks = Backbone.Collection.extend({
   model: Task,
   url: '/tasks',
 
