--- a/release/rails_integration.html
+++ b/release/rails_integration.html
@@ -85,9 +85,9 @@
 <pre class="programlisting">JST['todos/index']({ model: this.model })</pre>
 <div class="section" lang="en" xml:lang="en">
 <div class="titlepage"><div><div><h4 class="title">
-<a id="_a_note_jammit_and_a_jst_naming_gotcha"></a>A note Jammit and a JST naming gotcha</h4></div></div></div>
-<p>One issue with Jammit we’ve encountered and worked around is that the JST template path can change when adding new templates.</p>
-<p>When using Jammit, we run into a slightly sticky issue as an app grows from one template subdirectory to multiple template subdirectories.</p>
+<a id="_a_note_on_jammit_and_a_jst_naming_gotcha"></a>A note on Jammit and a JST naming gotcha</h4></div></div></div>
+<p>One issue with Jammit that we’ve encountered and worked around is that the JST template path can change when adding new templates.</p>
+<p>When using Jammit, there is a slightly sticky issue as an app grows from one template subdirectory to multiple template subdirectories.</p>
 <p>Let’s say you place templates in app/templates. You work for a while on the "Tasks" feature, placing templates under app/templates/tasks. So, window.JST looks something like:</p>
 <pre class="programlisting">JST['form']
 JST['show']
@@ -133,7 +133,7 @@ end</pre>
       todos/
         index.jst.ejs
         show.jst.ejs</pre>
-<p>Using Sprockets' preprocessors, we can use templates as before.  Here, we’re using the EJS template preprocessor to provide the same functionality as Underscore.js' templates.  It compiles the <code class="literal">*.jst</code> files and makes them available to the <code class="literal">window.JST</code> function.  Identifying the <code class="literal">.ejs</code> extension and invoking EJS to compile the templates is managed by Sprockets, and requires the <code class="literal">ejs</code> gem to be included in the application Gemfile.</p>
+<p>Using Sprockets' preprocessors, we can use templates as before.  Here, we’re using the EJS template preprocessor to provide the same functionality as Underscore.js' templates.  It compiles the <code class="literal">*.jst</code> files and makes them available to the <code class="literal">window.JST</code> function.  Sprocket handles identifying the <code class="literal">.ejs</code> extension and invoking EJS to compile the templates; to do this, Sprocket requires the <code class="literal">ejs</code> gem to be included in the application Gemfile.</p>
 <p>Underscore.js templates:
 <a class="ulink" href="http://documentcloud.github.com/underscore/#template" target="_top">http://documentcloud.github.com/underscore/#template</a></p>
 <p>EJS gem:
@@ -148,10 +148,10 @@ end</pre>
 <div class="section" lang="en" xml:lang="en">
 <div class="titlepage"><div><div><h3 class="title">
 <a id="_automatically_using_the_rails_authentication_token"></a>Automatically using the Rails authentication token</h3></div></div></div>
-<p>When using Backbone.js in a Rails app, you will run into a conflct with the Rails built in Cross Site Scripting (XSS) protection.</p>
-<p>When Rails XSS is enabled, each POST or PUT request to Rails should include a special token which is verified to ensure that the reqtest originated from a user which is actually using the Rails app. In recent versions of Rails, Backbone.js Ajax requests are no exception.</p>
-<p>To get around this, you have two options. Disable Rails XSS projection (not recommended), or make Backbone.js play nicely with Rails XSS.</p>
-<p>To make Backbone.js play nicely with Rails XSS you can include a monkeypatch to Backbone.js on your pages which patches Backbone.js to include the Rails XSS token in any requests it makes.</p>
+<p>When using Backbone.js in a Rails app, you will run into a conflict with the Rails built in Cross Site Scripting (XSS) protection.</p>
+<p>When Rails XSS is enabled, each POST or PUT request to Rails should include a special token which is verified to ensure that the request originated from a user which is actually using the Rails app. In recent versions of Rails, Backbone.js Ajax requests are no exception.</p>
+<p>To get around this, you have two options. Disable Rails XSS protection (not recommended), or make Backbone.js play nicely with Rails XSS.</p>
+<p>To make Backbone.js play nicely with Rails XSS you can monkeypatch Backbone.js to include the Rails XSS token in any requests it makes.</p>
 <p>The following is one such script.</p>
 <pre class="programlisting">//
 // With additions by Maciej Adwent http://github.com/Maciek416
