--- a/release/toc.html
+++ b/release/toc.html
@@ -42,7 +42,7 @@
 <a href="book.html#_models_and_collections">Models and collections</a></b></h3><br/>
 <a href="book.html#_naming_conventions_chapter_unstarted"><b>Naming conventions (chapter unstarted)</b></a><br/>
 <a href="book.html#_nested_resources_chapter_unstarted"><b>Nested resources (chapter unstarted)</b></a><br/>
-<a href="book.html#_relationships_chapter_unstarted"><b>Relationships (chapter unstarted)</b></a><br/>
+<a href="book.html#_model_associations"><b>Model associations</b></a><br/>
 <a href="book.html#_scopes_and_filters"><b>Scopes and filters</b></a><br/>
 <a href="book.html#_sorting"><b>Sorting</b></a><br/>
 <a href="book.html#_client_server_duplicated_business_logic_chapter_unstarted"><b>Client/Server duplicated business logic (chapter unstarted)</b></a><br/>
