--- a/release/models_and_collections.html
+++ b/release/models_and_collections.html
@@ -38,12 +38,83 @@
 <a id="_naming_conventions_chapter_unstarted"></a>Naming conventions (chapter unstarted)</h3></div></div></div></div>
 <div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
 <a id="_nested_resources_chapter_unstarted"></a>Nested resources (chapter unstarted)</h3></div></div></div></div>
-<div class="section" lang="en" xml:lang="en"><div class="titlepage"><div><div><h3 class="title">
-<a id="_relationships_chapter_unstarted"></a>Relationships (chapter unstarted)</h3></div></div></div></div>
+<div class="section" lang="en" xml:lang="en">
+<div class="titlepage"><div><div><h3 class="title">
+<a id="_model_associations"></a>Model associations</h3></div></div></div>
+<p>Backbone.js doesn’t prescribe a way to define associations between models, so we need to get creative and use the power of JavaScript to set up associations in a way that it’s usage is natural.</p>
+<div class="section" lang="en" xml:lang="en">
+<div class="titlepage"><div><div><h4 class="title">
+<a id="_belongs_to_associations"></a>Belongs to associations</h4></div></div></div>
+<p>Setting up a <code class="literal">belongs_to</code> association in Backbone is a two step process. Let’s discuss setting up the association that may occur between a task and a user. The end result of the approach is a <code class="literal">Task</code> instance having a property called <code class="literal">user</code> where we store the associated <code class="literal">User</code> object.</p>
+<p>To set this up, let’s start by telling Rails to augment the task’s JSON representation to also send over the associated user attributes:</p>
+<pre class="programlisting">class Task &lt; ActiveRecord::Base
+  belongs_to :user
+
+  def as_json(options = {})
+    super(include: { user: { only: [:name, :email] } })
+  end
+end</pre>
+<p>This means that when Backbone calls <code class="literal">fetch()</code> for a <code class="literal">Task</code> model, it will include the name and email of the associated user nested within the task JSON representation. Something like this:</p>
+<pre class="programlisting">{
+  "title": "Buy more Cheeseburgers",
+  "due_date": "2011-03-04",
+  "user": {
+    "name": "Robert McGraffalon",
+    "email": "bobby@themcgraffalons.com"
+  }
+}</pre>
+<p>Now that we receive user data with the task’s JSON representation, let’s tell our Backbone User model to store the User object. We do that on the task’s initializer. Here’s a first cut at that:</p>
+<pre class="programlisting">var Task = Backbone.Model.extend({
+  initialize: function() {
+    this.user = new User(this.get('user'));
+  }
+});</pre>
+<p>A couple of improvements to the above: You’ll soon realize that you will might be setting the user outside of the initialize as well. Also, the initializer should check whether there user data in the first place. To address the first concern, let’s create a setter for the object. Backbone provides a handy function called <code class="literal">has</code> that returns whether the provided option is set for the object:</p>
+<pre class="programlisting">var User = Backbone.Model.extend({
+  initialize: function() {
+    if (this.has('user')) {
+      this.user = setUser(new User(this.get('user')));
+    }
+  },
+
+  setUser: function(user) {
+    this.user = user;
+  }
+});</pre>
+<p>The final setup allows for a nice clean interface to a task’s user, by accessing the task property fo the user instance.</p>
+<pre class="programlisting">var task = Task.fetch(1);
+console.log(task.get('title') + ' is being worked on by ' + task.user.get('name'));</pre>
+</div>
+<div class="section" lang="en" xml:lang="en">
+<div class="titlepage"><div><div><h4 class="title">
+<a id="_has_many_associations"></a>Has many associations</h4></div></div></div>
+<p>You can take a similar approach to set up a <code class="literal">has_many</code> association on the client side models. This time, however, the object’s property will be a Backbone collection.</p>
+<p>Following the example, say we need access to a user’s tasks. Let’s set up the JSON representation on the Rails side first:</p>
+<pre class="programlisting">class User &lt; ActiveRecord::Base
+  has_many :tasks
+
+  def as_json(options = {})
+    super(include: { tasks: { only: [:body, :due_date] } })
+  end
+end</pre>
+<p>Now, on the Backbone <code class="literal">User</code> model’s initializer, let’s call the <code class="literal">setTasks</code> function:</p>
+<pre class="programlisting">var User = Backbone.Model.extend({
+  initialize: function() {
+    var tasks = new Tasks.reset(this.get('tasks'));
+    this.setTasks(tasks);
+  },
+
+  setTasks: function(tasks) {
+    this.tasks = tasks;
+  }
+});</pre>
+<p>Note that we are setting the relation to an instance of the <code class="literal">Tasks</code> collection.</p>
+</div>
+</div>
 <div class="section" lang="en" xml:lang="en">
 <div class="titlepage"><div><div><h3 class="title">
 <a id="_scopes_and_filters"></a>Scopes and filters</h3></div></div></div>
-<p>To filter a <code class="literal">Backbone.Collection</code>, like with Rails named scopes, define functions on your collections that return new collection instances, filtered by your criteria.  A first implementation might look like this:</p>
+<p>To filter a <code class="literal">Backbone.Collection</code>, like with Rails named scopes, define functions on your collections that filter by your criteria and return new instances of the collection class. A first implementation might look like this:</p>
 <pre class="programlisting">var Tasks = Backbone.Collection.extend({
   model: Task,
   url: '/tasks',
@@ -107,7 +178,7 @@ var Tasks = Backbone.Collection.extend({
     return task.dueDate;
   }
 });</pre>
-<p>If you’d like to provide more than one sort on your collection, you can use an approach similar to the <code class="literal">filtered</code> function above, and return a new <code class="literal">Backbone.Collection</code> whose <code class="literal">comparator</code> is overridden.  Call <code class="literal">sort</code> to update the ordering on the new collection:</p>
+<p>If you’d like to provide more than one sort order on your collection, you can use an approach similar to the <code class="literal">filtered</code> function above, and return a new <code class="literal">Backbone.Collection</code> whose <code class="literal">comparator</code> is overridden.  Call <code class="literal">sort</code> to update the ordering on the new collection:</p>
 <pre class="programlisting">var Tasks = Backbone.Collection.extend({
   model: Task,
   url: '/tasks',
